// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generatePlugins configures the git plugin to commit the specified assets as part of the release process 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  "@semantic-release/changelog",
  [
    "@semantic-release/exec",
    {
      "prepareCmd": "npx prettier --parser markdown --write CHANGELOG.md",
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [
        "./CHANGELOG.md",
        "./src",
      ],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;

exports[`generatePlugins configures the git plugin to commit the updated package files when the isNodeModule parameter is set to true 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  "@semantic-release/changelog",
  [
    "@semantic-release/exec",
    {
      "prepareCmd": "npx prettier --parser markdown --write CHANGELOG.md",
    },
  ],
  [
    "@semantic-release/npm",
    {
      "npmPublish": false,
      "pkgRoot": ".",
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [
        "./CHANGELOG.md",
        "./package.json",
        "./package-lock.json",
        "./yarn-lock.yaml",
      ],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;

exports[`generatePlugins configures the git plugin to omit committing the updated package files when isNodeModule is set to false 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  "@semantic-release/changelog",
  [
    "@semantic-release/exec",
    {
      "prepareCmd": "npx prettier --parser markdown --write CHANGELOG.md",
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [
        "./CHANGELOG.md",
      ],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;

exports[`generatePlugins configures the github plugin to release the specified assets as part of the release process 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  "@semantic-release/changelog",
  [
    "@semantic-release/exec",
    {
      "prepareCmd": "npx prettier --parser markdown --write CHANGELOG.md",
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [
        "./CHANGELOG.md",
      ],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [
        "./src",
      ],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;

exports[`generatePlugins configures the npm plugin to bump the package versions when the isNodeModule parameter is set to true 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  "@semantic-release/changelog",
  [
    "@semantic-release/exec",
    {
      "prepareCmd": "npx prettier --parser markdown --write CHANGELOG.md",
    },
  ],
  [
    "@semantic-release/npm",
    {
      "npmPublish": false,
      "pkgRoot": ".",
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [
        "./CHANGELOG.md",
        "./package.json",
        "./package-lock.json",
        "./yarn-lock.yaml",
      ],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;

exports[`generatePlugins excludes the changelog plugin when called with the disableChangelog parameter set to true 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;

exports[`generatePlugins excludes the npm plugin when called with the isNodeModule parameter set to false 1`] = `
[
  [
    "@semantic-release/commit-analyzer",
    {
      "parserOpts": {
        "mergeCorrespondence": [
          "id",
          "source",
        ],
        "mergePattern": /\\^Merge pull request #\\\\d\\+ from \\.\\*\\$/u,
      },
      "preset": "angular",
      "releaseRules": [],
    },
  ],
  [
    "@semantic-release/release-notes-generator",
    {
      "preset": "angular",
      "writerOpts": {
        "transform": [Function],
      },
    },
  ],
  "@semantic-release/changelog",
  [
    "@semantic-release/exec",
    {
      "prepareCmd": "npx prettier --parser markdown --write CHANGELOG.md",
    },
  ],
  [
    "@semantic-release/git",
    {
      "assets": [
        "./CHANGELOG.md",
      ],
      "message": "chore(release): v\${nextRelease.version}",
    },
  ],
  [
    "@semantic-release/github",
    {
      "assets": [],
      "failComment": false,
      "releasedLabels": false,
      "successComment": false,
    },
  ],
]
`;
